--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
     <p>Tambem podemos carregar imagens de links</p>
     <img src="https://images.vexels.com/media/users/3/166403/isolated/lists/a5a33bf3004830a2bd581e9fa65de660-
     javascript-programming-language-icon.png" alt="">
+    <h1>Teste de formularios</h1>
+    <form action="" autocomplete="on">
+        <p><label for="inome">Nome:</label><input type="text" name="nome" id="inome" required autocomplete="username"></p>      
+        <p><label for="ihora">Horario:</label><input type="time" name="hora" id="ihora"></p>
+        <p><label for="idata">Data:</label><input type="date" name="data" id="idata"></p>
+    </form>
 
     <style src =style.css> </style>
 </body>
